# progress

./: .gitattributes  .gitignore  Readme.md  calc.code-workspace  index.js  package.json
.github/workflows/: main.yml  test.yml  upload.yml  windows.yml
src/: alerts.html  form.html  header.html  index.html  main.js  package.json  style.css  tailwind.config.js  week.html
src-tauri/: Cargo.toml  tauri.conf.json
src/fonts/: demo.html
src/src/: index.html  style.css
src/src/fonts/: stylesheet.css
src/src/fonts/incolsolata/: style.css
src/src/html_components/: alerts.html  form.html  header.html  week.html
src/src/js/: alerts.js  alerts.ts  form.js  form.ts  framework.ts  main.js  main.ts  week.js  week.ts  week_manager.js  week_manager.ts
