[package]
name = "app"
version = "1.3.0"
description = "Progress tracking app"
authors = [ "antimatter96" ]
license = ""
repository = "https://github.com/antimatter96/progress"
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = ["dialog-all", "fs-all", "os-all", "path-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
